--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images/volkswagen.png" alt="Wes profile picture"></td>
+      <td><img src="volkswagen.png" alt="Wes profile picture"></td>
       <td><h1>MARK WESTLY</h1>
           <p><em>Computer Engineer at <strong><a href="https://www.ue.edu.ph/mla/">University of the East </a> </strong></em></p>
           <p>I am learning how to become a fullstack web developer</p> </td>
